# oz_01_collabo-004

./: .gitcommitmsg.txt  .gitignore  README.md  package-lock.json  package.json  pyproject.toml  requirements.txt
.github/workflows/: checks.yml  deploy.yml
app/: pyproject.toml
app/categories/: admin.py  connectorserializer.py  models.py  serializers.py  tests.py  urls.py  views.py
app/categories/migrations/: 0001_initial.py  0002_remove_category_product_categoryproductconnector.py  0002_remove_category_user_alter_category_name_and_more.py  0003_merge_20240411_0948.py  0003_remove_category_user_alter_category_name_and_more.py
app/common/: utils.py
app/config/: constants.py  settings.py  urls.py
app/core/management/commands/: wait_for_db.py
app/coupons/: admin.py  models.py  serializers.py  services.py  tests.py  urls.py  views.py
app/coupons/migrations/: 0001_initial.py  0002_alter_usercoupon_expired_at.py  0002_alter_usercoupon_status.py
app/orders/: admin.py  models.py  serializers.py  tests.py  urls.py  utils.py  views.py
app/orders/migrations/: 0001_initial.py  0002_alter_order_departure_date_alter_order_return_date.py  0002_order_option_peoples_order_option_pets_and_more.py  0003_alter_order_people_alter_order_pet_and_more.py  0003_rename_option_peoples_order_people_and_more.py  0004_remove_order_coupon_order_usercoupon_and_more.py  0004_remove_order_pet.py  0005_rename_usercoupon_order_user_coupon.py
app/products/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
app/products/migrations/: 0001_initial.py  0002_alter_product_description_img_and_more.py  0002_product_product_img_alter_product_sale.py  0003_alter_product_description_img_and_more.py  0004_alter_product_description_img_and_more.py
app/reviews/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
app/reviews/migrations/: 0001_initial.py  0002_initial.py  0002_productreview_view_count_and_more.py
app/users/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
app/users/migrations/: 0001_initial.py  0002_user_profile_image.py  0003_user_nickname_alter_user_profile_image.py
app/wishlist/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
app/wishlist/migrations/: 0001_initial.py
backend/: Dockerfile  README.md  docker-compose.yml  requirements.dev.txt  requirements.txt
backend/.github/workflows/: checks.yml
backend/app/categories/: apps.py  connectorserializer.py  models.py  serializers.py  urls.py  views.py
backend/app/common/: models.py
backend/app/config/: paginations.py  settings.py  urls.py
backend/app/coupons/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
backend/app/orders/: models.py  serializers.py  urls.py  views.py
backend/app/products/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
backend/app/reviews/: models.py  serializers.py  tests.py  urls.py  views.py
backend/app/users/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
backend/app/wishlist/: models.py  serializers.py  tests.py  urls.py  views.py
backend/doggo_app/: settings.py  urls.py
backend/proxy/: Dockerfile  default.conf.tpl
backend/scripts/: run.sh
doggo_app/: manage.py
doggo_app/doggo_app/: asgi.py  wsgi.py
frontend/: package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.js  axios.jsx  index.css
frontend/src/Component/: LifeCycle.jsx  Navbar.css  Navbar.js  Testaa.jsx
frontend/src/Page/: MyInfoPage.css  MyInfoPage.js  (+1 more)
(+152 files in other folders)
